# my_mmdeploy_onnx_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/cmake/MMDeploy/: MMDeployConfig.cmake  MMDeployConfigVersion.cmake  MMDeployTargets-release.cmake  MMDeployTargets.cmake
src/: object_detection_batch_inference.cpp  object_detection_my.cpp  object_detection_official.cpp  object_detection_single_inference.cpp
test_cpp/: CMakeLists.txt  test.cpp  test2exe.cpp
test_python/: test.py
